add: multilanguage support, allowed units, part of Calculation form (its validation logic)